--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,8 @@
  <!--  <body data-spy="scroll" data-target="#myAffix"> -->
   <body>
 
+    {% include header.html %}
+    
     <div id="main" class="container main">
       {{ content }}
     </div>
