--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<div class="row">
   <div id="myArticle" class="col-sm-9">
     <div class="post-area post">
       <article>
@@ -64,3 +65,4 @@ layout: default
       {% endfor %}
     </div>
   </div>
+</div>
