--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<div class="row">
   <div id="myArticle" class="col-sm-9">
     <div class="post-area post">
       <header>
@@ -36,3 +37,4 @@ layout: default
       <div class="content-text"></div>
     </div>
   </div>
+</div>
