--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<div class="row">
   <div id="myArticle" class="col-sm-9">
     <div class="post-area post">
       <article>
@@ -30,3 +31,4 @@ layout: default
       <div class="content-text"></div>
     </div>
   </div>
+</div>
