--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,23 +3,8 @@
 
   {% include head.html %}
 
- <!--  <body data-spy="scroll" data-target="#myAffix"> -->
-  
-  <script>
-  var scrollUpDelay = 1;
-  var scrollUpSpeed = 30;
-  function scrollUp()
-  {
-    if(document.body.scrollTop<1)
-    {
-      return;
-    }
-    document.body.scrollTop=document.body.scrollTop-scrollUpSpeed;
-    setTimeout('scrollUp()',scrollUpDelay);
-  }
-  </script>
-  
-  <body>
+ <body data-spy="scroll" data-target="#myAffix">  
+  <!--  <body> -->
 
     {% include header.html %}
     
