--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@
 
   {% include head.html %}
 
- <body data-spy="scroll" data-target="#myAffix">  
-  <!--  <body> -->
+ <!--  <body data-spy="scroll" data-target="#myAffix"> -->  
+  <body>
 
     {% include header.html %}
     
@@ -13,7 +13,7 @@
     </div>
     
     <div id="top" data-toggle="tooltip" data-placement="left" title="back to top">
-      <a href="javascript:;">
+      <a href="javascript:scroll(0,0);">
         <div class="arrow"></div>
         <div class="stick"></div>
       </a>
