--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     </div>
     
     <div id="top" data-toggle="tooltip" data-placement="left" title="back to top">
-      <a href="javascript:scroll(0,0);">
+      <a href="javascript:scrollUp();">
         <div class="arrow"></div>
         <div class="stick"></div>
       </a>
@@ -23,5 +23,18 @@
 
     {% include newpost.html %}
   
+    <script>
+    var scrollUpDelay = 1;
+    var scrollUpSpeed = 30;
+    function scrollUp()
+    {
+      if(document.body.scrollTop<1)
+      {
+        return;
+      }
+      document.body.scrollTop=document.body.scrollTop-scrollUpSpeed;
+      setTimeout('scrollUp()',scrollUpDelay);
+    }
+    </script>
   </body>
 </html>
