--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,9 @@
 
   {% include head.html %}
 
- <!--  <body data-spy="scroll" data-target="#myAffix"> -->  
-  <body>
-
+ <body data-spy="scroll" data-target="#myAffix"> 
+  <!--<body> --> 
+  
     {% include header.html %}
     
     <div id="main" class="container main">
@@ -13,7 +13,7 @@
     </div>
     
     <div id="top" data-toggle="tooltip" data-placement="left" title="back to top">
-      <a href="javascript:scrollUp();">
+      <a href="javascript:backToTop();">
         <div class="arrow"></div>
         <div class="stick"></div>
       </a>
@@ -23,18 +23,5 @@
 
     {% include newpost.html %}
   
-    <script>
-    var scrollUpDelay = 1;
-    var scrollUpSpeed = 30;
-    function scrollUp()
-    {
-      if(document.body.scrollTop<1)
-      {
-        return;
-      }
-      document.body.scrollTop=document.body.scrollTop-scrollUpSpeed;
-      setTimeout('scrollUp()',scrollUpDelay);
-    }
-    </script>
   </body>
 </html>
