--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     </div>
     
     <div id="top" data-toggle="tooltip" data-placement="left" title="back to top">
-      <a href="#">
+      <a href="javascript:backToTop()">
         <div class="arrow"></div>
         <div class="stick"></div>
       </a>
@@ -22,6 +22,7 @@
     {% include footer.html %}
 
     {% include newpost.html %}
-  
+   
+    <script type="text/javascript" src="../static/js/jsindex.js"></script>
   </body>
 </html>
