--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,6 @@
 
     {% include newpost.html %}
    
-    <script type="text/javascript" src="../static/js/jsindex.js"></script>
+    <script type="text/javascript" src="../static/js/index.js"></script>
   </body>
 </html>
