--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     </div>
     
     <div id="top" data-toggle="tooltip" data-placement="left" title="back to top">
-      <a href="javascript:backToTop()">
+      <a href="#">
         <div class="arrow"></div>
         <div class="stick"></div>
       </a>
@@ -23,6 +23,5 @@
 
     {% include newpost.html %}
    
-    <script type="text/javascript" src="https://kaiser1227.github.io/static/js/index.js"></script>
   </body>
 </html>
