--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
 
   {% include head.html %}
+  {% include analytics.html %}
 
  <body data-spy="scroll" data-target="#myAffix"> 
   <!--<body> --> 
