--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,6 +24,7 @@
           <li>
         {% endif %}
         <a href="{{ site.baseurl }}/">Home</a></li>
+        <a href="{{ site.baseurl }}/gis.html">gis</a>
 
         {% for p in site.pages %}
           {% if p.title %}
