--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,8 +23,8 @@
           {% else %}
           <li>
         {% endif %}
-        <a href="{{ site.baseurl }}/">Home</a></li>
-        <a href="{{ site.baseurl }}/gis.html">gis</a>
+        <a href="{{ site.baseurl }}/">Home</a>
+        <a href="{{ site.baseurl }}/gis.html">GIS</a></li>        
 
         {% for p in site.pages %}
           {% if p.title %}
