--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,8 +23,7 @@
           {% else %}
           <li>
         {% endif %}
-        <a href="{{ site.baseurl }}/">Home</a>
-        <a href="{{ site.baseurl }}/gis.html">GIS</a></li>        
+        <a href="{{ site.baseurl }}/">Home</a></li>        
 
         {% for p in site.pages %}
           {% if p.title %}
@@ -36,6 +35,7 @@
             <a href="{{ p.url | prepend: site.baseurl }}"><span class="glyphicon {{ p.icon }}"></span> {{ p.title }}</a></li>
           {% endif %}
         {% endfor %}
+        <li class="active"><a href="{{ site.baseurl }}/gis.html">GIS</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
