--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,7 +35,7 @@
             <a href="{{ p.url | prepend: site.baseurl }}"><span class="glyphicon {{ p.icon }}"></span> {{ p.title }}</a></li>
           {% endif %}
         {% endfor %}
-        <li class="active"><a href="{{ site.baseurl }}/gis.html">GIS</a></li>
+        <!--<li class="active"><a href="{{ site.baseurl }}/gis.html">GIS</a></li>-->
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
