--- a/_layouts/gis.html
+++ b/_layouts/gis.html
@@ -2,17 +2,13 @@
 <html>
 
   {% include head.html %}
-<style type="text/css">
-html, body, div {
-	width: 100%; height: 100%;
-}
-</style>
+
  <body data-spy="scroll" data-target="#myAffix"> 
   <!--<body> --> 
   
     {% include header.html %}
     
-    <div id="main" class="container main">
+    <div id="main" class="container main" style="width: 100%; height: 100%;">
       {{ content }}
     </div>
     
