--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,4 +27,12 @@
     
 	<script type="text/javascript" src="{{"/static/js/index.js" | prepend:site.baseurl}}"></script>
 	<script>hljs.initHighlightingOnLoad();</script>
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	
+	<script>
+	  (adsbygoogle = window.adsbygoogle || []).push({
+	    google_ad_client: "ca-pub-5651853344696016",
+	    enable_page_level_ads: true
+	  });
+	</script>
 </head>
